force-app/main/default/objects/AF_RequiredDocument__c/AF_RequiredDocument__c.object-meta.xml
<CustomObject>
    <description>ALF-RS-08 (LFRDN-338) FR13: one row per document required before a Reservation Contract can be generated, so the check is a real reference-and-link, not a bare self-attestation checkbox. Rows are seeded per reservation from AF_RequiredDocumentType__mdt (the configurable list - HLD&apos;s own document set is explicitly &quot;Pending customer confirmation,&quot; so the list lives in metadata, not hardcoded Apex/Flow logic). AF_VehicleReservation__c.AF_RequiredDocumentsComplete__c is derived from whether every row here is Linked or Waived, replacing the old manual checkbox.</description>
    <label>Required Document</label>
    <nameField>
        <displayFormat>DOC-{0000}</displayFormat>
        <label>Required Document Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Required Documents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>