force-app/main/default/objects/AF_RequiredDocument__c/fields/AF_DocumentType__c.field-meta.xml
<CustomField>
    <fullName>AF_DocumentType__c</fullName>
    <description>Which document this row represents - copied from AF_RequiredDocumentType__mdt.MasterLabel when the row is seeded. Free text rather than a picklist so the configurable metadata list can grow without a field-metadata deploy.</description>
    <label>Document Type</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>