force-app/main/default/objects/AF_RequiredDocument__c/fields/AF_ExternalReference__c.field-meta.xml
<CustomField>
    <fullName>AF_ExternalReference__c</fullName>
    <description>For a document type this org already tracks elsewhere as a reference/pointer rather than a file (e.g. &quot;Approval Reference&quot; = AF_VehicleReservation__c.AF_ApprovalReference__c, &quot;Vehicle Stock / VIN&quot; = the linked Vehicle&apos;s own VIN) - holds that reference instead of requiring a duplicate file upload.</description>
    <label>External Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>