force-app/main/default/objects/AF_RequiredDocument__c/fields/AF_LinkedContentDocumentId__c.field-meta.xml
<CustomField>
    <fullName>AF_LinkedContentDocumentId__c</fullName>
    <description>Id of the ContentDocument (Notes &amp; Attachments / Files) that satisfies this document requirement. Set by the rep uploading the file against this Required Document record, or by AF_FL_RequiredDocument_MarkLinkedOnUpload when a file is attached directly.</description>
    <label>Linked Content Document Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>