force-app/main/default/objects/AF_RequiredDocument__c/fields/AF_Notes__c.field-meta.xml
<CustomField>
    <fullName>AF_Notes__c</fullName>
    <label>Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>