force-app/main/default/objects/AF_RequiredDocument__c/fields/AF_Status__c.field-meta.xml
<CustomField>
    <fullName>AF_Status__c</fullName>
    <description>Not Linked = the document hasn&apos;t been attached/referenced yet. Linked = a file is attached via Notes &amp; Attachments/Files and AF_LinkedContentDocumentId__c points at it, or AF_ExternalReference__c holds an external pointer (e.g. an Approval Reference already recorded elsewhere on the reservation). Waived = an admin/manager has explicitly excused this document for this reservation (e.g. Trade-In Appraisal on a deal with no trade-in) - counts as satisfied for the completeness check but is visibly distinct from Linked in reporting.</description>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Linked</fullName>
                <default>true</default>
                <label>Not Linked</label>
            </value>
            <value>
                <fullName>Linked</fullName>
            </value>
            <value>
                <fullName>Waived</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>