force-app/main/default/objects/AF_RequiredDocument__c/fields/AF_VehicleReservation__c.field-meta.xml
<CustomField>
    <fullName>AF_VehicleReservation__c</fullName>
    <label>Vehicle Reservation</label>
    <referenceTo>AF_VehicleReservation__c</referenceTo>
    <relationshipLabel>Required Documents</relationshipLabel>
    <relationshipName>AF_RequiredDocumentItems</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>